<?xml version="1.0"?>
<package>
  <name>ridgeback_tutorials</name>
  <version>0.5.2</version>
  <description>Ridgeback's tutorials.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>BSD</license>

  <url type="website">https://clearpathrobotics.com/ridgeback-indoor-robot-platform/</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>

  <export>
  </export>
</package>
